Bugfix: Fixes spacing issues for non header and non paragraph elements.

--- a/public/themes/wiki_cleanify/stylesheets/application.css
+++ b/public/themes/wiki_cleanify/stylesheets/application.css
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6, p {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji, Twemoji Mozilla; 	
 }
 
-.wiki * {
+.wiki h1, .wiki h2, .wiki h3, .wiki h4, .wiki h5, .wiki h6, .wiki p {
 	padding: 0;
 }
 
@@ -68,11 +68,6 @@ h1 h2 h3 h4 h5 h6 {
 	line-height: 1.225;
 }
 
-.wiki h1 {
-
-}
-
-
 code {
 	padding: .2em .3em;
 	margin: 0;
@@ -80,3 +75,4 @@ code {
 	background-color: rgba(0,0,0,.04);
 	border-radius: 3px;
 }
+
